<resources>
    <string name="app_name">SIOT</string>
    <string name="username" />
    <string name="staff">STAFF</string>
    <string name="student">STUDENT</string>
    <string name="student_info">Student info</string>
    <string name="attendence">Attendence</string>
    <string name="library_record">Library record</string>
    <string name="notes">Notes</string>
    <string name="select_year">Select Year</string>
    <string name="add_new_class">Add New Class</string>
    <string name="name">Name</string>
    <string name="Name" />
    <string name="third_year">THIRD YEAR</string>
    <string name="first_year">FIRST YEAR</string>
    <string name="second_year">SECOND YEAR</string>
    <string name="library_records">LIBRARY RECORDS</string>
    <string name="select_an_option_to_see_the_books_available">Select an option to see the books available</string>
    <string name="semester_1">SEMESTER-1</string>
    <string name="semester_2">SEMESTER-2</string>
    <string name="semester_3">SEMESTER-3</string>
    <string name="semester_4">SEMESTER-4</string>
    <string name="semester_5">SEMESTER-5</string>
    <string name="semester_6">SEMESTER-6</string>
    <string name="select_semester">SELECT SEMESTER</string>
    <string name="select_branch">SELECT BRANCH</string>
    <string name="automobile_engineering">AUTOMOBILE ENGINEERING</string>
    <string name="civil_engineering">CIVIL ENGINEERING</string>
    <string name="mechanical_engineering">MECHANICAL ENGINEERING</string>
    <string name="computer_engineering">COMPUTER ENGINEERING</string>
    <string name="information_technology">INFORMATION TECHNOLOGY</string>
    <string name="book_name">Book_Name</string>
    <string name="book">Book_name</string>
    <string name="todo">TODO</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>