<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".civil_engg_semesters">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46">

        <Button
            android:id="@+id/civilsem1"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/semester_1" />

        <Button
            android:id="@+id/civilsem2"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:text="@string/semester_2" />

        <Button
            android:id="@+id/civilsem3"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:text="@string/semester_3" />

        <Button
            android:id="@+id/civilsem4"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:text="@string/semester_4" />

        <Button
            android:id="@+id/civilsem5"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:text="@string/semester_5" />

        <Button
            android:id="@+id/civilsem6"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:text="@string/semester_6" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="354dp"
        android:layout_height="59dp"
        android:gravity="center_horizontal"
        android:text="@string/select_semester"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.831" />

</androidx.constraintlayout.widget.ConstraintLayout>