<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0496a6"
    tools:context=".library_Semselection">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/select_semester"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.831" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="100dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <Button
            android:id="@+id/sem1"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:background="#9cd3db"
            android:text="@string/semester_1" />

        <Button
            android:id="@+id/sem2"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:background="#9cd3db"
            android:text="@string/semester_2" />

        <Button
            android:id="@+id/sem3"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:background="#9cd3db"
            android:text="@string/semester_3" />

        <Button
            android:id="@+id/sem4"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:background="#9cd3db"
            android:text="@string/semester_4" />

        <Button
            android:id="@+id/sem5"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:background="#9cd3db"
            android:text="@string/semester_5" />

        <Button
            android:id="@+id/sem6"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:background="#9cd3db"
            android:text="@string/semester_6" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>