<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".comp_engg_semesters"
    android:background="#0496a6">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46">

        <Button
            android:id="@+id/compsem1"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/semester_1"
            android:background="#9cd3db"/>

        <Button
            android:id="@+id/compsem2"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:text="@string/semester_2"
            android:background="#9cd3db"/>

        <Button
            android:id="@+id/compsem3"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:text="@string/semester_3"
            android:background="#9cd3db"/>

        <Button
            android:id="@+id/compsem4"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:text="@string/semester_4"
            android:background="#9cd3db"/>

        <Button
            android:id="@+id/compsem5"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:text="@string/semester_5"
            android:background="#9cd3db"/>

        <Button
            android:id="@+id/compsem6"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:text="@string/semester_6"
            android:background="#9cd3db"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="354dp"
        android:layout_height="59dp"
        android:gravity="center_horizontal"
        android:text="@string/select_semester"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.831" />

</androidx.constraintlayout.widget.ConstraintLayout>